--- a/src/app/components/Sidebar.module.css
+++ b/src/app/components/Sidebar.module.css
@@ -32,6 +32,8 @@
 .boardsSection {
   flex-grow: 1;
   padding: 0 1.5rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .sectionTitle {
@@ -46,6 +48,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
+  flex-grow: 1;
 }
 
 .boardLink {
@@ -89,6 +92,7 @@
   margin-left: -1.5rem;
   width: calc(100% + 1.5rem);
   text-align: left;
+  margin-top: auto;
 }
 
 .createBoardButton:hover {
