feat: allow project to be created.

--- a/src/app/components/Sidebar.module.css
+++ b/src/app/components/Sidebar.module.css
@@ -79,6 +79,11 @@
   height: 1rem;
 }
 
+.createProjectContainer {
+  margin-top: 1rem;
+  padding: 0 1rem;
+}
+
 .createBoardButton {
   display: flex;
   align-items: center;
