refactor: fix style issues with main view

--- a/src/components/ProjectView.module.css
+++ b/src/components/ProjectView.module.css
@@ -4,6 +4,8 @@
   background-color: #F4F7FD;
   display: flex;
   flex-direction: column;
+  margin-left: 300px;
+  width: calc(100% - 300px);
 }
 
 .header {
