--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 // Import the css reset and fonts first!
-@import './../../node_modules/reset-css/sass/reset';
+@use './../../node_modules/reset-css/sass/reset';
 
-@import './global/defaults.scss';
-@import './fonts/ubuntu/index';
-@import "./global/app-button.scss";
+@use './global/defaults.scss';
+@use './fonts/ubuntu/index';
+@use "./global/app-button.scss";
