--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -13,7 +13,7 @@ $font-families:
 // E.g. ff(primary)
 @function ff($key)
 {
-	@return map-get($map: $font-families, $key: $key)
+	@return map.get($font-families, $key)
 };
 
 // SIZE
