feat: apply sass:map imports

--- a/src/styles/utils/_fonts.scss
+++ b/src/styles/utils/_fonts.scss
@@ -1,6 +1,6 @@
 @use './functions' as f;
 @use './media-queries' as mq;
-
+@use 'sass:map';
 // FAMILIES
 
 $primary-font-family: #{'Ubuntu', sans-serif};
