--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,27 +1,27 @@
 @use "./../styles/utils/index" as u;
 
 .main {
+  min-height: 100vh;
+  width: 100vw;
+  background: #f4f5fa;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
-  padding: 2rem;
-  background-color: #f5f5f5;
 }
 
-.title {
-  font-size: 2.5rem;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 1rem;
-  text-align: center;
-}
 
-.description {
-  font-size: 1.2rem;
-  color: #666;
+.message {
+  color: #8a97a8;
+  font-size: 1.5rem;
+  font-weight: 600;
   text-align: center;
-  max-width: 600px;
-  line-height: 1.5;
-} 
+  margin-bottom: 2rem;
+  max-width: 90vw;
+}
