--- a/src/components/AppButton.module.scss
+++ b/src/components/AppButton.module.scss
@@ -5,8 +5,8 @@
   outline: none;
   border-radius: u.rem(24);
   font-weight: 700;
-  font-size: u.rem(12);
-  padding: u.rem(20) u.rem(64);
+  font-size: u.rem(16);
+  padding: u.rem(20);
   cursor: pointer;
   background: u.color(primary);
   color: u.color(white);
@@ -18,6 +18,26 @@
     font-size: u.rem(15);
     padding: u.rem(23) u.rem(83);
 	}
+
+  &:hover {
+    // Default hover for primary
+    &.primary {
+      background: u.color(primary-light);
+    }
+    // Default hover for secondary
+    &.secondary {
+      background: u.color(gray-light);
+    }
+    // Default hover for destructive
+    &.destructive {
+      background: u.color(red-light);
+    }
+  }
+
+  &:active {
+    transform: scale(0.96);
+    box-shadow: 0 2px 8px 0 rgba(99, 95, 199, 0.10);
+  }
 }
 
 // .large {
