--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   background: #f4f5fa;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
