--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -6,8 +6,8 @@
   background: #f4f5fa;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  // align-items: center;
+  // justify-content: center;
 }
 
 .container {
@@ -17,6 +17,9 @@
   justify-content: center;
 }
 
+.header {
+  width: 100%;
+}
 
 .message {
   color: #8a97a8;
