--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,20 +1,18 @@
 @use "./../styles/utils/index" as u;
 
 .main {
+  display: flex;
   min-height: 100vh;
   width: 100vw;
   background: #f4f5fa;
+}
+
+.container {
+  flex: 1;
   display: flex;
   flex-direction: column;
   // align-items: center;
   // justify-content: center;
-}
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
 }
 
 .header {
