--- a/src/components/forms/add-project-form.module.scss
+++ b/src/components/forms/add-project-form.module.scss
@@ -32,11 +32,25 @@
     border-color: #6366f1;
     box-shadow: 0 0 0 2px rgba(99, 102, 241, 0.2);
   }
+  
+  &.error {
+    border-color: #dc2626;
+    
+    &:focus {
+      box-shadow: 0 0 0 2px rgba(220, 38, 38, 0.2);
+    }
+  }
 }
 
 .textarea {
   resize: vertical;
   min-height: 5rem;
+}
+
+.errorText {
+  color: #dc2626;
+  font-size: 0.875rem;
+  margin-top: 0.25rem;
 }
 
 .error {
