--- a/src/components/dropdown-menu/DropdownMenu.module.scss
+++ b/src/components/dropdown-menu/DropdownMenu.module.scss
@@ -6,6 +6,7 @@
 }
 
 .trigger {
+  min-width: 220px;
   width: 100%;
   background: #fff;
   color: #222;
@@ -33,7 +34,8 @@
 .menu {
   position: absolute;
   top: calc(100% + 8px);
-  min-width: 100%;
+  width: 240px;
+  max-width: 320px;
   background: #fff;
   border-radius: 12px;
   box-shadow: 0 8px 32px rgba(0,0,0,0.10);
@@ -60,6 +62,8 @@
   transition: background 0.15s, color 0.15s;
   user-select: none;
   border-radius: 6px;
+  white-space: normal;
+  word-break: break-word;
 }
 .menuItem:hover,
 .menuItem:focus,
