--- a/src/styles/utils/_functions.scss
+++ b/src/styles/utils/_functions.scss
@@ -1,4 +1,5 @@
 @use 'sass:math';
+@use 'sass:string';
 
 //https://css-tricks.com/snippets/sass/px-to-em-functions/
 $browser-context: 16;
@@ -16,11 +17,11 @@ $browser-context: 16;
 // Pixels to vw value. For high resolutions
 @function px_to_vw($value) {
 	$calc: math.div($value, 1920) * 100;
-	@return unquote($calc + 'vw');
+	@return string.unquote($calc + 'vw');
 }
 
 // Rem to vw value. For high resolutions
 @function rem_to_vw($value) {
 	$calc: math.div(($value * 16), 1920) * 100;
-	@return unquote($calc + 'vw');
+	@return string.unquote($calc + 'vw');
 }
