--- a/src/components/board/Board.module.scss
+++ b/src/components/board/Board.module.scss
@@ -1,4 +1,19 @@
-// Updated styles to make the board occupy full height and allow scrolling for overflowing cards
+@use "./../../styles/utils/index" as u;
+.emptyBoard {
+    // background: u.color(gray-light);
+    color: #1d1d1d;
+    box-shadow: none;
+    border-radius: 20px;
+    padding: 1rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 260px;
+    width: 100%;
+    height: min-content;
+}
+
 .board {
     display: flex;
     gap: 1.5rem; // Increased gap for better spacing
@@ -18,4 +33,8 @@
     flex: 0 0 auto; // Don't allow columns to grow or shrink
     overflow-y: visible; // Let the column component handle its own scrolling
     padding-right: 0.5rem; // Add padding for scrollbar spacing
+}
+
+.addListButton{
+    background-color: #6b72801a;
 }
