--- a/src/components/button/AppButton.module.scss
+++ b/src/components/button/AppButton.module.scss
@@ -127,3 +127,19 @@
     margin-right: 0.5rem;
   }
 }
+
+
+.closeButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  transition: background 0.2s;
+}
+
+.closeButton:hover {
+  background: #e2e4e6;
+}
