--- a/src/components/button/AppButton.module.scss
+++ b/src/components/button/AppButton.module.scss
@@ -29,14 +29,17 @@
   }
 
   &:hover {
+
     // Default hover for primary
     &.primary {
       background: u.color(primary-light);
     }
+
     // Default hover for secondary
     &.secondary {
       background: u.color(gray-light);
     }
+
     // Default hover for destructive
     &.destructive {
       background: u.color(red-light);
@@ -58,44 +61,28 @@
     background: u.color(red);
     color: u.color(white);
   }
-} 
 
-// .large {
-//   font-size: u.rem(32);
-//   padding: u.rem(20) u.rem(64);
-// }
+  &.actionButton {
+    background: #2563eb;
+    color: #fff;
+    font-weight: 600;
+    border-radius: 6px;
+    padding: 8px 18px;
+    font-size: 1rem;
+    border: none;
+    cursor: pointer;
+    transition: background 0.2s;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    white-space: nowrap;
+  }
 
-// .small {
-//   font-size: u.rem(24);
-//   padding: u.rem(20) u.rem(48);
-// }
+  &.actionButton:hover {
+    background: #174ea6;
+  }
 
-// .primary.idle {
-//   background: #6863c7;
-//   color: #fff;
-// }
-// .primary.hover {
-//   background: #a6a3f7;
-//   color: #fff;
-// }
-
-// .secondary.idle {
-//   background: #f2f2fa;
-//   color: #6863c7;
-// }
-// .secondary.hover {
-//   background: #d7d6ef;
-//   color: #6863c7;
-// }
-
-// .destructive.idle {
-//   background: #d35d5d;
-//   color: #fff;
-// }
-// .destructive.hover {
-//   background: #eea3a3;
-//   color: #fff;
-// }
+}
 
 .icon {
   display: inline-flex;
