--- a/src/components/column/Column.module.scss
+++ b/src/components/column/Column.module.scss
@@ -1,43 +1,49 @@
-
 .column {
-    background-color: #f9fafb; 
-    color: #1d1d1d; 
-    box-shadow: none; 
-    border-radius: 20px; 
+    background-color: #f9fafb;
+    color: #1d1d1d;
+    box-shadow: none;
+    border-radius: 20px;
     padding: 1rem;
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 1rem; 
-    border: 1px solid #e5e7eb; 
-    max-width: 260px; 
-    width: 100%; 
+    gap: 1rem;
+    border: 1px solid #e5e7eb;
+    max-width: 260px;
+    width: 100%;
     height: min-content;
 }
 
 .column h2 {
     margin: 0;
     font-size: 1rem;
-    color: #6b7280; 
-    font-weight: 600; 
+    color: #6b7280;
+    font-weight: 600;
 }
 
 .tasks {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem; 
+    gap: 0.75rem;
     overflow-y: auto;
-    padding-right: 0.25rem; 
+    padding-right: 0.25rem;
     flex-grow: 1;
     max-height: calc(100% - 2rem);
 }
 
 .dropping {
-    border: 2px solid orange; 
+    border: 2px solid orange;
 }
 
 .actions {
-  display: flex;
-  align-items: center;
-  gap: 12px;
+    display: flex;
+    //   align-items: center;
+    justify-content: space-between;
+    gap: 12px;
+}
+
+.addCardInputRow {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 }
