--- a/src/components/board/Board.module.scss
+++ b/src/components/board/Board.module.scss
@@ -1,6 +1,19 @@
 @use "./../../styles/utils/index" as u;
+
 .emptyBoard {
-    // background: u.color(gray-light);
+    color: #1d1d1d;
+    box-shadow: none;
+    border-radius: 20px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 260px;
+    width: 100%;
+    height: min-content;
+}
+
+.addListContainer {
     color: #1d1d1d;
     box-shadow: none;
     border-radius: 20px;
@@ -35,6 +48,6 @@
     padding-right: 0.5rem; // Add padding for scrollbar spacing
 }
 
-.addListButton{
+.addListButton {
     background-color: #6b72801a;
 }
