--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,3 +4,4 @@
 @use './global/defaults.scss';
 @use './fonts/ubuntu/index';
 @use "./global/app-button.scss";
+@use "./global/markdown-editor.scss";
