feat: allow the card title to be updated.

--- a/src/components/modals/card-detail-modal.module.scss
+++ b/src/components/modals/card-detail-modal.module.scss
@@ -21,6 +21,38 @@
     font-size: 20px;
     font-weight: 600;
     flex-grow: 1;
+    cursor: pointer;
+    padding: 4px;
+    border-radius: 4px;
+    transition: background-color 0.2s;
+
+    &:hover {
+        background-color: rgba(0, 0, 0, 0.03);
+    }
+
+    &:focus {
+        outline: none;
+        background-color: rgba(0, 0, 0, 0.05);
+    }
+}
+
+.titleInput {
+    width: 100%;
+    margin: 0;
+    font-size: 20px;
+    font-weight: 600;
+    flex-grow: 1;
+    padding: 4px;
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: white;
+    outline: none;
+    font-family: inherit;
+    
+    &:focus {
+        border-color: rgba(0, 0, 0, 0.4);
+        box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+    }
 }
 
 .closeButton {
