feat: style updates

--- a/src/components/modals/modal.module.scss
+++ b/src/components/modals/modal.module.scss
@@ -16,7 +16,7 @@
 .modal {
   background: #fff;
   border-radius: 1rem;
-  padding: 2rem 1.2rem 1.2rem 1.2rem;
+  padding: 0rem 1rem;
   width: 90vw;
   box-shadow: 0 4px 32px rgba(0, 0, 0, 0.12);
   position: relative;
