--- a/src/components/modals/card-detail-modal.module.scss
+++ b/src/components/modals/card-detail-modal.module.scss
@@ -22,13 +22,13 @@
     font-weight: 600;
     flex-grow: 1;
     cursor: pointer;
-    padding: 4px;
+    // padding: 4px;
     border-radius: 4px;
     transition: background-color 0.2s;
-
-    &:hover {
-        background-color: rgba(0, 0, 0, 0.03);
-    }
+    color:black;
+    // &:hover {
+    //     background-color: rgba(0, 0, 0, 0.03);
+    // }
 
     &:focus {
         outline: none;
@@ -93,7 +93,7 @@
     margin: 0;
     font-size: 16px;
     font-weight: 600;
-    // color: $neutral-700;
+    color:black;    
 }
 
 .description {
