--- a/src/components/modals/modal.module.scss
+++ b/src/components/modals/modal.module.scss
@@ -18,6 +18,8 @@
   border-radius: 1rem;
   padding: 0rem 1rem;
   width: 90vw;
+  max-height: 90vh;
+  overflow-y: auto;
   box-shadow: 0 4px 32px rgba(0, 0, 0, 0.12);
   position: relative;
 
