--- a/src/components/modals/card-detail-modal.module.scss
+++ b/src/components/modals/card-detail-modal.module.scss
@@ -3,16 +3,13 @@
 .container {
     padding: 24px;
     width: 100%;
-    // max-width: 480px;
-    // max-height: calc(100vh - 80px);
-    // overflow-y: auto;
 }
 
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 24px;
+    margin-bottom: 5px;
 }
 
 .title {
@@ -23,7 +20,7 @@
     cursor: pointer;
     border-radius: 4px;
     transition: background-color 0.2s;
-    color:black;
+    color: black;
 
     &:focus {
         outline: none;
@@ -43,7 +40,7 @@
     background-color: white;
     outline: none;
     font-family: inherit;
-    
+
     &:focus {
         border-color: rgba(0, 0, 0, 0.4);
         box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
@@ -87,7 +84,7 @@
     margin: 0;
     font-size: 16px;
     font-weight: 600;
-    color:black;    
+    color: black;
 }
 
 .description {
@@ -156,7 +153,8 @@
     margin-top: 12px;
 }
 
-.cancelButton, .saveButton {
+.cancelButton,
+.saveButton {
     padding: 6px 12px;
     font-size: 14px;
     border-radius: 4px;
@@ -197,18 +195,26 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+    margin-bottom: 20px;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 13px;
 }
 
 .metadataItem {
     display: flex;
     align-items: baseline;
-    gap: 8px;
     font-size: 14px;
 }
 
 .metadataLabel {
     font-weight: 600;
-    min-width: 80px;
+    min-width: 60px;
+}
+
+.pills {
+    background-color: #bdbdbd;
+    padding: 5px;
+    border-radius: 13px;
 }
 
 @media (max-width: 480px) {
