--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -5,10 +5,10 @@
   display: flex;
   min-height: 100vh;
   width: 100vw;
-  background: #f4f5fa;
+  background: u.color(cbackground);
 }
 .title{
-  margin-top: 32px;
+  margin-top: u.rem(32);
   margin-bottom: 0;
 }
 .container {
